# psacking

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  Thingi10K_genus_eq_0.py  file_ids.txt  pyproject.toml
examples/: basic_packing.py  benchmark.py  github_teaser.py  multi_format_demo.py  pack_and_export_blender.py  render_crosssection.py  render_flyaround.py
spectral_packer/: __init__.py  blender_export.py  mesh_io.py  packer.py  rotations.py  voxelizer.py
spectral_packing/: CMakeLists.txt  INSTALL.md  bindings.cpp  constants.h  error.cpp  error.h  fft3.cu  indexOps.cpp  indexOps.h  packing.cpp  path.h  timing.h  types.h  voxelGrid.cpp  voxelGrid.h
spectral_packing/VoxSurf/: 1382602.stl  CMakeLists.txt  VoxSurf  main.cpp
tests/: __init__.py  conftest.py  render_blend.py  run_blender_tests.py  test_bindings.py  test_blender_export.py  test_core.py  test_distance_1d.py  test_distance_3d.py  test_distance_correctness.py  test_flood_fill.py  test_interlocking.py  test_mesh_io.py  test_orientations.py  test_packer.py  test_pitch.py  test_visual_packing.py
tests/benchmarks/: __init__.py  benchmark_thingi.py  profile_packing.py
